wordpress.benefitscheckup.org/wp-content/themes/bcuwptheme/bcu.css
/* ... */
.modal-body {
    max-height: inherit;
}

h2.benefitsCheckUpTitle {
    font-size: 1.8em !important;
    color: #012A5C !important;
}

#esiMenuToggleButton {
    display: none;
    padding: 0;
    margin-bottom: 10px;
    background: #f1601b;
    width: 50px;
    height: 50px;
    border: 0;
    border-radius: 0;
    filter: progid:DXImageTransform.Microsoft.Matrix(M11=0, M12=0, M21=0, M22=0, sizingMethod='auto expand');
    zoom: 1;
    /*top: ;*/
    left: 0;
    float: none;
    position: absolute;
    z-index: 10;
    color: white;
}

.well.modal-body {
    overflow-y: scroll;
    overflow-x:hidden;
}

.frozenBody {
    overflow-x: hidden;
    overflow-y: hidden;
    position:fixed;
}

